<resources>
    <string name="app_name">EcoWorld</string>
    <string name="catala">Català</string>
    <string name="espanol">Español</string>
    <string name="ingles">English</string>
    <string name="hard">HARD</string>
    <string name="normal">NORMAL</string>
    <string name="easy">EASY</string>
    <string name="introduccionESP">"¡Bienvenid@!\n\nMi nombre es EcoWorld y os voy a contar porqué estoy triste.\n\nDurante los últimos años he estado viajando por el mundo y mis amigos los animales me han ido contando las problemáticas que afectan a sus vidas, como la contaminación de sus hábitats a causa del efecto humano.\n\n¡Cuento contigo para que me ayudes a salvar el planeta y a nuestros amigos los animales!\n\n¿Quieres aprender cosas para mejorar nuestro planeta?"</string>
    <string name="introduccionCAT">"Benvinguts!\n\nEl meu nom és EcoWorld i us explicaré per què estic trist.\n\nDurant els últims anys he estat viatjant pel món i els meus amics els animals m'han anat explicant les problemàtiques que afecten les seves vides, com la contaminació dels seus hàbitats a causa de l'efecte humà.\n\nCompto amb tu perquè m'ajudis a salvar el planeta i als nostres amics els animals!\n\nVols aprendre coses per millorar el nostre planeta?"</string>
    <string name="introduccionENG">"Welcome!\n\nMy name is EcoWorld and I am going to tell you why I am sad.\n\nDuring the last years I have been traveling the world and my friends the animals have been telling me the problems that affect their lives, such as pollution of their habitats because of the human effect.\n\nI am counting on you to help me save the planet and our animal friends!\n\nDo you want to learn things to improve our planet?"</string>
    <string name="pregunta">¿De que color es el contendor dónde tenemos que tirar un brick de leche?</string>
    <string name="explicacion">Así lo podemos reciclar.</string>
    <string name="felicidadesESP">"¡ENHORABUENA!\n\n¡HEMOS SALVADO A NUESTROS AMIGOS LOS ANIMALES!"</string>
    <string name="felicidadesCAT">"ENHORABONA!\n\nHEM SALVAT ELS NOSTRES AMICS ELS ANIMALS!"</string>
    <string name="felicidadesENG">"CONGRATULATIONS!\n\nWE HAVE SAVED OUR FRIENDS THE ANIMALS!"</string>
    <string name="fraseActivistaESP">"ENHORABUENA!\n\nHAS CONSEGUIDO EL NIVEL DE ACTIVISTA DE "</string>
    <string name="fraseActivistaCAT">"ENHORABONA!\n\nHAS ACONSEGUIT EL NIVELL D'ACTIVISTA DE "</string>
    <string name="fraseActivistaENG">"CONGRATULATIONS!\n\nYOU HAVE ACHIEVED THE ACTIVIST LEVEL "</string>
    <string name="exitESP">¿Estás segur@ que quieres salir?</string>
    <string name="exitCAT">Estàs segur/a que vols sortir?</string>
    <string name="exitENG">Are you sure you want to exit?</string>
    <string name="title_activity_developers">DevelopersActivity</string>
    <string name="comensar">Començar</string>
    <string name="empezar">Empezar</string>
    <string name="start">Start</string>
    <string name="si">Si</string>
    <string name="sii">Sí</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="jugar">Jugar</string>
    <string name="sortir">Sortir</string>
    <string name="salir">Salir</string>
    <string name="exit">Exit</string>
    <string name="play">Play</string>
    <string name="siguiente">Siguiente</string>
    <string name="seguent">Següent</string>
    <string name="next">Next</string>
    <string name="saltar">Saltar</string>
    <string name="skip">Skip</string>
    <string name="credits">Crèdits</string>
    <string name="jugarNou">Jugar de nou</string>
    <string name="posicio">Posició</string>
    <string name="usuari">Usuari</string>
    <string name="creditos">Créditos</string>
    <string name="jugarNuevo">Jugar de nuevo</string>
    <string name="posicion">Posición</string>
    <string name="usuario">Usuario</string>
    <string name="playAgain">Play Again</string>
    <string name="position">Position</string>
    <string name="username">Username</string>
    <string name="classificacio">Classificació</string>
    <string name="clasificacion">Clasificación</string>
    <string name="ranking">Ranking</string>
    <string name="capsProjecte">Caps de projecte</string>
    <string name="jefesProyecto">Jefes de proyecto</string>
    <string name="projectManagers">"Project Managers"</string>
    <string name="professorsProjecte">Professors de projecte</string>
    <string name="profesoresProyecto">Profesores de proyecto</string>
    <string name="projectTeachers">Project Teachers</string>
    <string name="desarrolladors">Desarrolladors</string>
    <string name="desarrolladores">Desarrolladores</string>
    <string name="developers">Developers</string>
    <string name="creditseng">Credits</string>
    <string name="introCAT">Introducció</string>
    <string name="introESP">Introducción</string>
    <string name="introENG">Introduction</string>
    <string name="introCAT2">Explicació del joc</string>
    <string name="introESP2">Explicación del juego</string>
    <string name="introENG2">Game explanation</string>
    <string name="explicacionCAT">Per salvar als nostres amics els animals anirem recorrent el planeta.\n\nAnirem per cada continent contestant quatre preguntes.\n\nUn cop hem contestat les preguntes d\'un continent passarem a un altre continent.\n\nAixí fins a salvar a tots els animals!\n\nRecorda que et puc ajudar fins a tres vegades prement el botó d\'ajuda.\n\nSom-hi!</string>
    <string name="explicacionESP">Para salvar a nuestros amigos los animales vamos a ir recorriendo el planeta.\n\nVamos a ir por cada continente contestando cuatro preguntas.\n\nUna vez hemos contestado las preguntas de un continente pasaremos a otro continente.\n\n¡Así hasta salvar a todos los animales!\n\nRecuerda que te puedo ayudar hasta tres veces pulsando el botón de ayuda.\n\n¡Vamos allá!</string>
    <string name="explicacionENG">To save our friends the animals we are going to travel around the planet.\n\nWe are going to go through each continent answering four questions.\n\nOnce we have answered the questions from one continent we will go to the next continent.\n\nWe will do this until all the animals will be saved!\n\nRemember that I can help you up to three times by pressing the help button.\n\nLet\'s go!</string>
</resources>